fix the overflow x

--- a/src/index.sass
+++ b/src/index.sass
@@ -7,7 +7,8 @@
   padding: 0
   box-sizing: inherit
   font-family: inherit
-
+#root
+  overflow-x: hidden
 html
   font-size: 62.5%
   scroll-behavior: smooth
