--- a/src/stylesheets/projectS.sass
+++ b/src/stylesheets/projectS.sass
@@ -10,6 +10,8 @@
     height: 55vh
   @media (max-width:768px)   
     height: 43vh
+  @media (max-width:576px)   
+    height: 30vh
   .swiper-pagination-bullet
     background: #1976d2 !important // Blue accent for pagination
     opacity: 0.8
